@@ -1,4 +1,7 @@
 CVS code -
+- General
+	- Changed _POSIX_VERSION checks in regex code to HAVE_REGEX_H, 
+	  added check for regex.h in configure.in.
 - cut.c:
   do_cut_text()
 	- Don't immediately abort if we're on filebot and the marker is
